--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 *, *:before, *:after {
     box-sizing: inherit;
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
@@ -30,6 +31,18 @@ ul {
     --accent: #f0b429;
     --dark: #000000;
     --background: #e2e8f0;
+}
+
+h1 {
+    padding: 5px 0;
+}
+
+.avatar--big {
+    height: 75px;
+}
+
+.avatar--small {
+    height: 50px;
 }
 
 .container {
@@ -76,7 +89,7 @@ ul {
     justify-content: space-between;
     align-items: center;
     gap: 50px;
-    margin: 10px 40px;
+    padding: 10px 40px;
 }
 
 .header-section {
@@ -95,4 +108,72 @@ ul {
 .search-bar,
 input[type="search"] {
     flex: 1;
+}
+
+.main {
+    display: grid;
+    grid-template-columns: 1fr 250px;
+    grid-template-rows: 1fr 1fr;
+    grid-template-areas: 
+        "projects announcements"
+        "projects trending";
+    padding: 20px;
+    gap: 20px;
+}
+
+.projects {
+    grid-area: projects;
+}
+
+.project-cards {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    gap: 20px;
+    align-content: stretch;
+}
+
+.project-card {
+    background-color: var(--light);
+    border-radius: 5px;
+    border-left: 5px solid var(--accent);
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+}
+
+.project-description {
+    flex: 1;
+}
+
+.project-icons {
+    align-self: flex-end;
+}
+
+.announcements {
+    grid-area: announcements;
+}
+
+.trending {
+    grid-area: trending;
+}
+
+.announcement-items,
+.trending-items {
+    background-color: var(--light);
+    border-radius: 5px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.announcement-item:not(:last-child) {
+    border-bottom: solid 1px var(--background);
+    padding-bottom: 20px;
+}
+
+.trending-item {
+    display: flex;
+    gap: 20px;
+    align-items: center;
 }
