--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ div.project-title {
     display: grid;
     height: 100vh;
     width: 100vw;
-    grid: min-content 1fr / 250px 1fr;
+    grid: 200px 1fr / 250px 1fr;
     grid-template-areas: 
         "sidebar header"
         "sidebar main";
@@ -127,11 +127,6 @@ div.project-title {
     align-items: center;
     gap: 20px;
     margin: 20px 0;
-}
-
-.main {
-    grid-area: main;
-    background-color: var(--background);
 }
 
 .header-bar {
@@ -169,13 +164,15 @@ input[type="search"] {
 }
 
 .main {
+    grid-area: main;
+    background-color: var(--background);
     display: grid;
-    grid-template-columns: 1fr 250px;
+    grid-template-columns: 1fr 300px;
     grid-template-rows: 1fr 1fr;
     grid-template-areas: 
         "projects announcements"
         "projects trending";
-    padding: 20px;
+    padding: 30px 40px 30px 20px;
     gap: 20px;
 }
 
@@ -185,7 +182,7 @@ input[type="search"] {
 
 .project-cards {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: 20px;
     align-content: stretch;
 }
@@ -212,7 +209,7 @@ input[type="search"] {
 
 .announcements {
     grid-area: announcements;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
 }
 
 .trending {
@@ -238,4 +235,11 @@ input[type="search"] {
     display: flex;
     gap: 20px;
     align-items: center;
+}
+
+.trending-info {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    font-size: .9rem;
 }
