--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 *, *:before, *:after {
     box-sizing: inherit;
-    box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
@@ -32,6 +31,7 @@ ul {
     --dark: #000000;
     --background: #e2e8f0;
     --dark-grey: #636363;
+    box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
     font-weight: 300;
@@ -134,7 +134,7 @@ div.project-title {
     justify-content: space-between;
     align-items: center;
     gap: 50px;
-    padding: 10px 40px;
+    padding: 10px 50px 10px 40px;
 }
 
 .header-section {
@@ -154,6 +154,15 @@ div.project-title {
 .search-bar,
 input[type="search"] {
     flex: 1;
+}
+
+input[type="search"] {
+    appearance: none;
+    max-width: 600px;
+    background-color: var(--background);
+    border: none;
+    border-radius: 15px;
+    padding: 5px;
 }
 
 .welcome {
