--- a/style.css
+++ b/style.css
@@ -91,6 +91,16 @@ div.project-title {
     height: 50px;
 }
 
+button {
+    color: var(--light);
+    background-color: var(--main);
+    border-radius: 20px;
+    border: none;
+    padding: 10px 25px;
+    font-size: 1rem;
+    font-weight: 500;
+}
+
 .container {
     display: grid;
     height: 100vh;
@@ -139,7 +149,7 @@ div.project-title {
 
 .header-section {
     display: flex;
-    gap: 20px;
+    gap: 30px;
     justify-content: center;
     align-items: center;
 }
