--- a/style.css
+++ b/style.css
@@ -62,13 +62,6 @@ h2 {
     font-size: 1.5rem;
 }
 
-.branding {
-    font-size: 1.6rem;
-    display: flex;
-    gap: 20px;
-    align-items: center;
-}
-
 .nav {
     font-size: 1.2rem;
 }
@@ -146,10 +139,18 @@ button {
     font-weight: 500;
 }
 
+.branding {
+    font-size: 1.6rem;
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    transform: translateX(-10px);
+}
+
 .nav > ul > li {
     display: flex;
     align-items: center;
-    gap: 20px;
+    gap: 25px;
     margin: 20px 0;
 }
 
