--- a/style.css
+++ b/style.css
@@ -208,6 +208,7 @@ input[type="search"] {
         "projects trending";
     padding: 30px 40px 30px 20px;
     gap: 20px;
+    overflow: auto;
 }
 
 .projects {
